Fixed reply visibility issue and inserted footer-spacer

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,3 +102,7 @@ a {
     margin: 20px;
   }
 }
+
+.footer-spacer {
+  margin-bottom: 30px;
+}
